# NIH_chest_xray

./: README.md  pyproject.toml
code/: cnn.ipynb  eda.ipynb  eda.py
